# dtcg

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  requirements.txt
.github/workflows/: run-tests.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst
docs/source/_templates/: custom-class.rst  custom-module.rst
dtcg/: __init__.py  main.py
dtcg/api/internal/: _parse_oggm.py
dtcg/data_cube/: cryotempo_eolis.py  geo_zarr.py
dtcg/datacube/: cryotempo_eolis.py  desp.py  desp_era5.py  geo_zarr.py  geozarr.py  metadata_mapping.yaml  metadata_mapping_coords.yaml  metadata_mapping_data.yaml  surface_type.py  update_metadata.py  wgms.py
dtcg/integration/: calibration.py  oggm_bindings.py
dtcg/interface/: gateway.py  plotting.py  widgets.py
dtcg/tests/: conftest.py
dtcg/tests/data_cube/: test_cryotempo_eolis.py  test_geo_zarr.py
dtcg/tests/datacube/: conftest.py  test_cryotempo_eolis.py  test_desp.py  test_desp_era5.py  test_geo_zarr.py  test_geozarr.py  test_metadata_mapping.py
dtcg/tests/integration/: test_calibration.py  test_oggm_bindings.py
dtcg/tests/interface/: test_gateway.py  test_plotting.py
dtcg/tests/sample_data/: oggm_data.nc
dtcg/tests/test_inputs/: oggm_shop.tif
dtcg/validation/: annual_mb_validation.py  cryosat_validation.py  sentinel_validation.py  validation_metrics.py  validation_plotting.py  validator.py  wgms_validation.py
notebooks/: scratchpad.ipynb
