[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dtcg"
version = "0.0.3"
authors = [
    { name = "DTCG Contributors", email = "carolyn.michael@earthwave.co.uk" },
]
description = "DTCG API"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "DTCG",
    "OGGM",
    "API"
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 1 - Planning",
    "Private :: Do Not Upload",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy<2.0",
    "matplotlib",
    "bokeh",
    "holoviews",
    "geoviews",
    "seaborn",
    "xarray",
    "geopandas",
    "specklia",
    "oggm",
    "tables",
    "pyproj",
    "rasterio",
    "rioxarray",
    "salem",
    "pandas",
    "shapely",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "coverage",
    "coveralls",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme >= 1.1",
]
dev = [
    "dtcg[tests,docs]",
    "hatchling >= 1.12",
    "build >= 0.7",
    "pylint >= 2.16.1",
    "flake8 >= 6.0",
    "black >= 23.1",
    "isort",
]

[project.urls]
"Homepage" = "https://github.com/DTC-Glaciers/dtcg"
"Bug Tracker" = "https://github.com/DTC-Glaciers/dtcg/issues"
"Documentation" = "https://dtc-glaciers.github.io"

[tool.hatch.build.targets.sdist]
packages = ["dtcg"]
exclude = [
    "logs",
    "*.png",
    "*.vtu",
    "*.csv",
    "*.nc",
    "*.bat",
    "*.sh",
    "*.ipynb",
]

[tool.hatch.build.targets.wheel]
packages = ["dtcg"]

[tool.hatch.envs.default]
env-vars-file = ".env"